Code spacing fix - feedback demo

--- a/static/main.css
+++ b/static/main.css
@@ -291,7 +291,7 @@ body {
 .code-col {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 45vh - 59px - 80px);
+    height: calc(100vh - 40vh - 59px - 80px);
 }
 
 .code-editor {
@@ -624,5 +624,3 @@ body {
 #complete-btn:disabled:hover {
     cursor: not-allowed;
 }
-
-
